@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2021 the original author or authors.
+ * Copyright 2016-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,10 +17,12 @@
 package org.springframework.integration.file.dsl;
 
 import java.io.File;
+import java.nio.file.Path;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Map;
 import java.util.function.Function;
+import java.util.function.Predicate;
 
 import org.springframework.beans.DirectFieldAccessor;
 import org.springframework.integration.dsl.ComponentsRegistration;
@@ -273,6 +275,32 @@ public class FileInboundChannelAdapterSpec
 	 */
 	public FileInboundChannelAdapterSpec watchEvents(FileReadingMessageSource.WatchEventType... watchEvents) {
 		this.target.setWatchEvents(watchEvents);
+		return this;
+	}
+
+	/**
+	 * Set a depth for files walk API.
+	 * @param watchMaxDepth the depth for files walk.
+	 * @return the spec.
+	 * @since 6.1
+	 * @see #useWatchService
+	 * @see FileReadingMessageSource#setWatchMaxDepth(int)
+	 */
+	public FileInboundChannelAdapterSpec watchMaxDepth(int watchMaxDepth) {
+		target.setWatchMaxDepth(watchMaxDepth);
+		return this;
+	}
+
+	/**
+	 * Set a {@link Predicate} to check if it is eligible for {@link java.nio.file.WatchService}.
+	 * @param watchDirPredicate the {@link Predicate} to check dirs for walking.
+	 * @return the spec.
+	 * @since 6.1
+	 * @see #useWatchService
+	 * @see FileReadingMessageSource#setWatchDirPredicate(Predicate)
+	 */
+	public FileInboundChannelAdapterSpec watchDirPredicate(Predicate<Path> watchDirPredicate) {
+		target.setWatchDirPredicate(watchDirPredicate);
 		return this;
 	}
 
